[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "bsk_rl"
version = "1.0.0"
authors = [
    { name = "Adam Herrmann", email = "adam.herrmann@colorado.edu" },
    { name = "Mark Stephenson", email = "mark.a.stephenson@colorado.edu" },
]
description = "RL environments and tools for spacecraft autonomy research, built on Basilisk. Developed by the AVS Lab."
readme = "README.md"
requires-python = ">=3.9.0"
license = { text = "MIT" }
dependencies = [
    "deap==1.3.3",
    "Deprecated",
    "gymnasium",
    "matplotlib",
    "numpy",
    "pandas",
    "pettingzoo",
    "pytest==7.3.1",
    "pytest-cov",
    "pytest-repeat",
    "requests",
    "ruff>=0.1.9",
    "scikit-learn",
    "scipy",
    "sphinx-rtd-theme",
    "stable-baselines3",
    "tensorflow",
    "torch",
]

[project.scripts]
finish_install = "bsk_rl._finish_install:pck_install"
